[package]
name = "scripty_utils"
version = "1.0.0"
edition = "2021"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
num = "0.4"
sha2 = "0.10"
tracing = "0.1"
num_cpus = "1"
thousands = "0.2"
once_cell = "1"
systemstat = "0.2"
scripty_db = { path = "../scripty_db" }
scripty_config = { path = "../scripty_config" }
tokio = { version = "1", features = ["parking_lot", "signal"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", features = [
	"voice",
	"dashmap",
	"parking_lot",
	"rustls_backend",
	"model",
	"gateway",
	"client",
	"cache",
	"builder",
	"collector",
	"utils",
	"typesize",
] }
sqlx = { version = "0.7", features = ["postgres", "macros", "migrate", "runtime-tokio-rustls", "time"] }
