[package]
name = "scripty_utils"
version = "1.0.0"
edition = "2024"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
num = "0.4"
sha2 = "0.10"
tracing = "0.1"
num_cpus = "1"
thousands = "0.2"
once_cell = "1"
systemstat = "0.2"
scripty_db = { path = "../scripty_db" }
scripty_config = { path = "../scripty_config" }
tokio = { version = "1", features = ["parking_lot", "signal"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", features = [
	"voice",
	"dashmap",
	"rustls_backend",
	"model",
	"gateway",
	"cache",
	"builder",
	"collector",
	"utils",
	"typesize",
	"transport_compression_zstd"
] }
sqlx = { version = "0.7", features = ["postgres", "macros", "migrate", "runtime-tokio-rustls", "time"] }
