[package]
name = "scripty_utils"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
hex.workspace = true
num.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
num_cpus.workspace = true
serenity.workspace = true
thousands.workspace = true
once_cell.workspace = true
systemstat.workspace = true

scripty_db = { path = "../scripty_db" }
scripty_config = { path = "../scripty_config" }