[package]
name = "scripty_webserver"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3"
serde_json = "1"
scripty_db = { path = "../scripty_db" }
scripty_i18n = { path = "../scripty_i18n" }
axum = { version = "0.6", features = [] }
async-stripe = { version = "0.21", features = ["async", "runtime-tokio-hyper-rustls", "webhook-events", "billing", "checkout", "connect"], default-features = false }
scripty_utils = { path = "../scripty_utils" }
scripty_config = { path = "../scripty_config" }
scripty_metrics = { path = "../scripty_metrics" }
serde = { version = "1", features = ["derive"] }
scripty_bot_utils = { path = "../scripty_bot_utils" }
tokio = { version = "1", features = ["parking_lot"] }
tracing = { version = "0.1", features = ["release_max_level_info"] }
sqlx = { version = "0.6", features = ["postgres", "macros", "migrate", "offline", "runtime-tokio-rustls"] }
