[package]
name = "scripty_webserver"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
time.workspace = true
sqlx.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
serde_json.workspace = true

scripty_db = { path = "../scripty_db" }
scripty_i18n = { path = "../scripty_i18n" }
scripty_utils = { path = "../scripty_utils" }
scripty_config = { path = "../scripty_config" }
scripty_metrics = { path = "../scripty_metrics" }
scripty_botlists = { path = "../scripty_botlists" }
scripty_bot_utils = { path = "../scripty_bot_utils" }
